--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,34 @@ services:
     networks:
       - microservices-network
 
+  servico3:
+    build:
+      context: ./Servico3
+      dockerfile: Dockerfile
+    container_name: servico3
+    ports:
+      - "5002:5002"
+    volumes:
+      - ./Servico3:/app
+    environment:
+      - FLASK_APP=run.py
+      - FLASK_ENV=development
+      - PYTHONPATH=/app
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5002/swagger/"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
+    depends_on:
+      servico1:
+        condition: service_healthy
+      servico2:
+        condition: service_healthy
+    restart: unless-stopped
+    networks:
+      - microservices-network
+
 networks:
   microservices-network:
     driver: bridge
